# moon-ai-assistant-platform

./: .env.example  .gitignore  =1.0.0  AGENTS.md  CHAT_UI_FIXES.md  README.md  TESTING_GUIDE_user.md  check_ha_type.py  check_tokens.py  moon.bat  moon.sh  updatelog.md  verify_head_agent.py  verify_imports.py  verify_path.py
backend/: .gitignore  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agents/: README.md
backend/agents/head-agent/: AGENT.md  NOTEBOOK.md  SOUL.md  SPARK.md  USER.md  archived_notebook.md
backend/api/routes/: communications.py  files.py  messages.py
backend/api/websocket/: connection.py  handlers.py
backend/config/: settings.py
backend/core/agent/: __init__.py  head_agent.py
backend/core/communication/: __init__.py  service.py
backend/core/llm/: __init__.py  service.py
backend/core/memory/: __init__.py  condensation.py  condensation_link.py  token_counter.py
backend/database/: db.py
backend/models/: communication.py  file_models.py  message.py
backend/services/: file_service.py  message_service.py
backend/tests/: test_communication_api.py  test_communication_metadata.py  test_communication_schema.py  test_communication_service.py  test_condensation.py  test_condensation_link.py  test_context_builder.py  test_file_service.py  test_files_api.py  test_head_agent.py  test_health.py  test_integration_user_profile.py  test_llm_service.py  test_message_service.py  test_messages_api.py  test_notebook_operations.py  test_placeholder.py  test_token_counter.py  test_user_profile_update.py  test_websocket.py
(+55 files in other folders)
